objects/License__c.object
<CustomObject>
    <description>License tracking for advisor recruits.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 38</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 62</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 63</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 66</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Series 72</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesLogix_License_Id__c</fullName>
        <externalId>true</externalId>
        <label>SalesLogixLicenseId</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>License</label>
    <nameField>
        <displayFormat>L-{0000000000}</displayFormat>
        <label>License #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>